# influxalchemy

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: pytest.yml
influxalchemy/: __init__.py  client.py  measurement.py  measurement2.py  measurement3.py  meta.py  operations.py  query.py
notebooks/: Usage.ipynb
tests/: __init__.py  client_test.py  client_tests.py  measurement_test.py  measurement_tests.py  operations_test.py  operations_tests.py  query_test.py  query_tests.py
